# DeepTracers

./: .env  .replit  Pasted--Module-not-found-Error-Can-t-resolve-pages-Solutions-in-home-runner-AI-Threat-Shield-fronte-1727531143082.txt  README.md  ai_api.py  app.py  auth.py  models.py  pyproject.toml  replit_zip_error_log.txt  routes.py
.cache/nix/: binary-cache-v6.sqlite
.cache/replit/env/: latest  latest.json
.cache/replit/nix/: env.json
.local/state/replit/agent/: repl_state.json
.upm/: store.json
backend/: app.py  routes.py
backend/static/js/: main.js
backend/templates/: technology.html
frontend/src/: App.js
frontend/src/components/: Footer.js  Header.js
frontend/src/pages/: Home.js  Solutions.js  Technology.js  UseCases.js
static/css/: styles.css
static/img/: KYC-Video.webm  Solution-Media-Verification-Video.webm
templates/: base.html  contact.html  dashboard.html  index.html  login.html  profile.html  register.html  resources.html  solutions.html  use_cases.html
