[tool.poetry]
name = "deep-tracers-ai-threat-detection"
version = "0.1.0"
description = "Next-Gen AI Threat Detection platform by Deep Tracers"
authors = ["Deep Tracers Team <info@deeptracers.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
flask-sqlalchemy = "^3.1.1"
psycopg2-binary = "^2.9.9"
email-validator = "^2.2.0"
flask-login = "^0.6.3"
werkzeug = "^3.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
